--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,53 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        background: #121212;
+        color: white;
+        font-family: Arial, sans-serif;
+      }
+
+      /* Preloader styling */
+      #preloader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: #121212;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+        font-weight: bold;
+        transition: opacity 0.5s ease-out;
+      }
+    </style>
   </head>
   <body>
+    <div id="preloader"></div>
+
+    <!-- Root div for React -->
     <div id="root"></div>
+
+    <script>
+      window.addEventListener("DOMContentLoaded", () => {
+        setTimeout(() => {
+          document.getElementById("preloader").style.opacity = "0";
+          setTimeout(() => {
+            document.getElementById("preloader").style.display = "none";
+          }, 500);
+        }, 300);
+      });
+    </script>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
