--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>Compartmentalize AI</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
 
     <style>
       body {
